--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,13 @@
+#users_field { 
+    background: rgba(0, 0, 0, 0.15); 
+    padding-left: 1rem;
+    position: fixed; top: 0; left: 0; right: 0; 
+    display: flex; 
+    height: 3rem; 
+    box-sizing: border-box; 
+    backdrop-filter: blur(10px); 
+}
+
 /* Type selectors -- all "body" elements will use this style.*/
 /* rem is a unit which changes the size based on the text size of the html element. 
 So 3rem would be 3 times the text size of the "body" element.
@@ -5,6 +15,7 @@ Making the rem bigger would increase the gap between the input form and the mess
 body { 
     margin: 0; 
     padding-bottom: 3rem;
+    padding-top: 5rem;
     /* border: 5px solid red; */
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; 
 }
